[project]
name = "gamedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
    "redis>=5.0.0",
    "locust>=2.40.5",
]
